--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     font-family: 'Arial', sans-serif;
     display: flex;
@@ -43,4 +43,4 @@ body {
       padding: 1rem;
     }
   }
-  
+   */
